--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
   <head>
   </head>
   <body>
-    <h1>Hello, World!dfgdfgdfgdfgfd</h1>
+    <h1>Hello, World!</h1>
     <!-- This is an unwanted but committed change -->
   </body>
 </html>
