--- a/index.html
+++ b/index.html
@@ -1,8 +1,20 @@
 <html>
-  <head>
-  </head>
-  <body>
-    <h1>Hello, World!</h1>
-    <!-- This is an unwanted but committed change -->
-  </body>
+<head>
+</head>
+<body>
+<h1>Hello, Worljgd!</h1>
+</body>
+</html>
+<!doctype html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport"
+          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Document</title>
+</head>
+<body>
+
+</body>
 </html>
