--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </body>
 </html>
 <!doctype html>
-<html lang="en">
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport"
